force-app/main/default/objects/User/fields/Attio_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Attio_Account_Type__c</fullName>
    <label>Attio Account Type</label>
    <length>250</length>
    <type>Text</type>
</CustomField>