force-app/main/default/objects/User/fields/Attio_ID__c.field-meta.xml
<CustomField>
    <fullName>Attio_ID__c</fullName>
    <externalId>true</externalId>
    <label>Attio ID</label>
    <length>250</length>
    <type>Text</type>
</CustomField>