force-app/main/default/objects/User/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <label>Industry</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Music Production</fullName>
            </value>
            <value>
                <fullName>Call Centers</fullName>
            </value>
            <value>
                <fullName>Food and Travel</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>Logistics &amp; Transportation</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Sports</fullName>
            </value>
            <value>
                <fullName>Gaming</fullName>
            </value>
            <value>
                <fullName>Media Creation Tools</fullName>
            </value>
            <value>
                <fullName>Telecommunications</fullName>
            </value>
            <value>
                <fullName>TV &amp; Radio Broadcasting</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Movies &amp; Streaming Services</fullName>
            </value>
            <value>
                <fullName>Advertising</fullName>
            </value>
            <value>
                <fullName>Animation</fullName>
            </value>
            <value>
                <fullName>Digital Publishing</fullName>
            </value>
            <value>
                <fullName>News Publishers</fullName>
            </value>
            <value>
                <fullName>Channel Partners</fullName>
            </value>
            <value>
                <fullName>Health and Wellness</fullName>
            </value>
            <value>
                <fullName>Conversational Consumer Applications</fullName>
            </value>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>