force-app/main/default/objects/User/fields/User_Segment__c.field-meta.xml
<CustomField>
    <fullName>User_Segment__c</fullName>
    <label>User Segment</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Commercial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>