force-app/main/default/objects/User/fields/User_Territory__c.field-meta.xml
<CustomField>
    <fullName>User_Territory__c</fullName>
    <label>User Territory</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Territories</valueSetName>
    </valueSet>
</CustomField>